# tpc-fec-utils-vg

./: CMakeLists.txt  NOTES.md  README.md  READOUT.md
config/: CMakeLists.txt  README.md  fec-gbtx0-cfg-wb-wd-to.txt  fec-gbtx1-cfg-wb-wd-to.txt  sampa-tester-cfg.txt
contrib/: FindGitInfo.cmake  FindInfoLogger.cmake  FindReadoutCard.cmake  FindUpdateBuildReadoutCardOptions.cmake  findInstalledReadoutCards.sh  updateGitInfo.sh
doc/: CMakeLists.txt  Doxyfile.in
docker/: tpc-fec-utils-cc7.dockerfile
script/: CMakeLists.txt  check_pgen.sh  set_gbtctrl.sh  start_fec_readout.sh  stop_fec_readout.sh  tpc_initialize.sh.in  tpc_print_status.sh.in
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bar_common.hpp  bit_manipulation.hpp  cl_options.hpp  cmake_install.cmake  factory.hpp  fec.cpp  fec.hpp  fec_factory.hpp  fec_revision.cpp  fec_revision.hpp  gbt_sca.hpp  gbt_sca_i2c.cpp  gbt_sca_i2c.hpp  gbt_sca_i2c_adc.hpp  hdlc_core.cpp  hdlc_core.hpp  sampa.cpp  sampa.hpp  sampa_raw_data_decoder.cpp  simple_log.cpp  simple_log.hpp  tdbg.cpp  tfec.cpp  tsampa.cpp  tsca.cpp  utils.cpp  utils.hpp
src/cru/: CMakeLists.txt  cru.hpp  hdlc_cern_me.cpp  hdlc_cern_me.hpp
src/trorc/: CMakeLists.txt  file_writer.cpp  gbt_link.cpp  gbt_link.hpp  hdlc_sw_trorc.cpp  hdlc_sw_trorc.hpp  pcca_interface.hpp  sampa_tester.cpp  sampa_tester.hpp  tcheck.cpp  treadout.cpp  trigger.cpp  trigger.hpp  trorc.hpp  trorc_dma_in.cpp  trorc_dma_monitor.cpp  trorc_fec_readout.cpp  trorc_fec_readout_control.cpp  trorc_gbtctrl.cpp  trorc_init.cpp  trorc_registers.h  trorc_reset.cpp  trorc_rw.cpp  trorc_status_dump.cpp  trorc_trigger_control.cpp  tsampa-dft.cpp  tsampa-jtag.cpp  ttester.cpp
